my-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-demo-deployment
  labels:
    app: argocd-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: argocd-demo
  template:
    metadata:
      labels:
        app: argocd-demo
    spec:
      containers:
      - name: argocd-demo-container
        image: adamsipolab/argocd-demo:1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
