my-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-demo-service
spec:
  selector:
    app: argocd-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
